assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Exo:wght@100;200;300;400;500;600;700;800;900&family=Ubuntu:wght@300;400;500;700&display=swap");

body {
  font-family: "Exo", sans-serif;
  background-color: rgba(147, 213, 236, 0.3);
}

/* ------ Header ------ */

.push-right {
  position: absolute;
  right: 0;
  margin-right: 5px;
}

.header-background {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  min-height: 600px;
  margin-bottom: 100px;
  padding-bottom: 70px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fff;
  background-image: url(../images/background-hero-image2.jpg);
  background-repeat: no-repeat;
  background-position: top center;
  background-size: cover;
  background-attachment: fixed;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #000;
  text-decoration: none;
}

.transparent-overlay {
  position: absolute;
  top: 45%;
  left: 0;
  padding-top: 50px;
  padding-bottom: 50px;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0);
}

.display-4 {
  font-family: "Ubuntu", Helvetica, sans-serif;
  font-size: 3.5rem;
  font-weight: 400;
  color: rgba(255, 255, 255, 0.9);
}

.lead {
  font-family: "Ubuntu", Helvetica, sans-serif;
  font-size: 2rem;
  font-weight: 600;
  color: rgba(255, 255, 255, 0.9);
}

.navbar-brand {
  font-size: 1.5rem;
}

.navbar-light .navbar-brand {
  color: rgba(0, 0, 0, 0.73);
  font-weight: 600;
}

.btn {
  font-weight: 600;
}

/* ------ Review div ------ */

.review-block {
  max-width: 100%;
  margin-bottom: 40px;
}

.paragraph-1 {
  margin: 100px 50px 0px;
  padding: 20px 140px;
  font-family: "Exo", sans-serif;
  color: rgba(0, 0, 0, 0.73);
  font-size: 20px;
  text-align: center;
  text-transform: capitalize;
}

/* ------ Containers ------ */

.body-container {
  padding-top: 0px;
  padding-right: 10px;
  padding-left: 10px;
  max-width: 100%;
}

.flex-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.slider-container {
  margin: 80px 0;
}

/* ------ Features ------ */

.feature-section {
  padding-top: 40px;
  padding-bottom: 40px;
  font-family: "Ubuntu", Helvetica, sans-serif;
}

.row {
  margin: 0;
}

.feature-image-mask {
  max-width: 50%;
}

.feature-image {
  width: 60%;
  height: 100%;
  -o-object-fit: cover;
  object-fit: contain;
  -o-object-position: 50% 50%;
  object-position: 50% 50%;
  margin-left: 25%;
}

.heading-6 {
  font-family: "Ubuntu", Helvetica, sans-serif;
  color: rgba(0, 0, 0, 0.73);
  font-size: 18px;
  font-weight: 500;
  letter-spacing: 2px;
  text-transform: uppercase;
  text-align: left;
  margin-top: 40px;
  margin-bottom: 20px;
  padding-right: 25%;
}

.paragraph-2 {
  font-family: "Ubuntu", Helvetica, sans-serif;
  color: rgba(0, 0, 0, 0.73);
  font-size: 16px;
  text-transform: capitalize;
  text-align: left;
  padding-right: 25%;
  margin-bottom: 30px;
}

.shop-btn {
  text-align: center;
  margin-top: 30px;
}

/* ------ Carousal/slide ------ */

.carousel-inner img {
  width: 100%;
  height: 700px;
}

/* ------ About ------ */

.about-header {
  margin-bottom: 60px;
  margin-top: 20px;
  color: rgba(0, 0, 0, 0.73);
  font-weight: 500;
  text-align: center;
  text-transform: uppercase;
  font-family: "Ubuntu", Helvetica, sans-serif;
}

.about-paragraph {
  margin-right: 20px;
  margin-bottom: 50px;
  margin-left: 20px;
  padding-right: 100px;
  padding-left: 100px;
  color: rgba(0, 0, 0, 0.73);
  font-weight: 400;
  text-align: center;
  font-family: "Ubuntu", Helvetica, sans-serif;
  text-transform: capitalize;
}

.article-link {
  text-decoration: none;
  color: rgba(0, 0, 0, 0.73);
  text-align: center;
  font-weight: 500;
}

a:hover {
  color: rgba(0, 0, 0, 0.73);
  font-weight: 700;
}

#history {
  margin-bottom: 20px;
}

/* ------ Footer ------ */

footer {
  background-color: #efd4b7;
  color: rgba(0, 0, 0, 0.73);
  min-height: 120px;
  margin: 0;
}

.footer-heading {
  font-family: "Ubuntu", Helvetica, sans-serif;
  font-size: 14px;
  letter-spacing: 1px;
  font-weight: 300;
  color: rgba(0, 0, 0, 0.73);
  text-transform: uppercase;
  margin-top: 40px;
  margin-bottom: 20px;
  margin-left: 20px;
}

.copy-right {
  font-family: "Ubuntu", Helvetica, sans-serif;
  font-size: 15px;
  font-weight: 400;
  color: rgba(0, 0, 0, 0.73);
  text-transform: capitalize;
  text-align: center;
  margin-top: 40px;
  margin-bottom: 40px;
  padding-top: 45px;
}

.social-links {
  padding-bottom: 15px;
  margin-bottom: 40px;
  margin-left: 20px;
}

.social-links li a i {
  width: 32px;
  height: 32px;
  padding: 12px 0;
  border-radius: 50%;
  font-size: 13px;
  line-height: 7px;
  text-align: center;
  color: rgba(0, 0, 0, 0.73);
  background: rgba(147, 213, 236, 0.5);
  transition: all 0.35s ease-in-out;
  -moz-transition: all 0.35s ease-in-out;
  -webkit-transition: all 0.35s ease-in-out;
  -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
  background: rgba(255, 255, 255, 0.9);
}

/* ------ Subscribe form------ */

.subscribe-form {
    padding-left: 20px;
}

.subscribe-form-input-wrapper {
    text-align: left;
}

.subscribe-form-input {
    margin-bottom: 0px;
    background-color: rgba(255, 255, 255, 0.8);
    border: none;
}

.btn--subscribe {
    background-color: rgba(147, 213, 236, 0.5);
    border: none;
    color: rgba(0, 0, 0, 0.73);
}

/* ------ Media query ------ */

@media only screen and (max-width: 768px) {
  .display-4 {
    font-size: 2.5rem;
    font-weight: 400;
    color: rgba(255, 255, 255, 0.9);
  }

  .lead {
    font-size: 1.5rem;
    font-weight: 500;
    color: rgba(255, 255, 255, 0.9);
  }

  .flex-container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .feature-section {
    padding: 40px 20px;
  }

  .feature-image-mask {
    margin-right: 0px;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    -ms-grid-row-align: center;
    align-self: center;
  }

  .feature-image {
    width: 100%;
    height: 100%;
    margin-left: 50%;
  }

  .heading-6,
  .paragraph-2 {
    text-align: center;
    padding-right: 0;
    margin: 20px 20%;
  }

  .about-paragraph {
    padding-right: 60px;
    padding-left: 60px;
  }
}

@media only screen and (max-width: 600px) {
  .paragraph-1 {
    padding: 0;
    margin: 0 20px;
  }

  .feature-image {
    width: 140%;
    height: 100%;
    margin-left: 40%;
  }

  .paragraph-2 {
    padding: 0;
    margin: 20px;
  }

  .carousel-inner img {
    width: 100%;
    height: 400px;
  }

  .about-paragraph {
    padding-right: 0;
    padding-left: 0;
    text-align: left;
  }
}

@media only screen and (max-width: 600px) {
    .copy-right {
        margin-top: 0;
    }

    .social-links {
        margin-bottom: 0;
        padding-bottom: 0;
    }
}

